Change task window open on li element click
Now change task window opens on task
li element click and not only on name click

--- a/todo/templates/mainapp/task_item.html
+++ b/todo/templates/mainapp/task_item.html
@@ -1,6 +1,6 @@
 {% load static %}
-<li class="task">
-<a class="openmodal" id="openmodal{{task.id}}">{{task.title}} |
+<li class="task openmodal" id="openmodal{{task.id}}">
+<a >{{task.title}} |
     {{task.description|truncatewords:10}}
     <a class="change_starred_state"
        href="{% url 'change_starred_state' task.pk %}">
