Improved registration and login pages
Added navigation buttons to login on registration
page and vice versa

do not override the admin login template now
instead using my own that just based on it

--- a/todo/mainapp/static/mainapp/css/registration_page.css
+++ b/todo/mainapp/static/mainapp/css/registration_page.css
@@ -2,7 +2,7 @@ body{
 background-color: #212121;
 height: auto;
 font-size: 0.875rem;
-font-family: 'Arial';
+font-family: var(--font-family-primary);
 }
 
 form {
