--- a/todo/templates/mainapp/login.html
+++ b/todo/templates/mainapp/login.html
@@ -55,6 +55,9 @@
   <div class="submit-row">
     <input type="submit" value="{% translate 'Log in' %}">
   </div>
+  <div id="footer">
+    <a href="/registration">Dont have an account yet?</a>
+  </div>
 </form>
 
 </div>
