--- a/todo/templates/mainapp/registration_page.html
+++ b/todo/templates/mainapp/registration_page.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <title>Registration Page</title>
     <link rel="stylesheet" type="text/css" href="{%static 'mainapp/css/registration_page.css'%}">
+    <link rel="stylesheet" type="text/css" href="{%static 'admin/css/base.css'%}">
+    <link rel="stylesheet" type="text/css" href="{%static 'admin/css/dark_mode.css'%}">
+    <link rel="stylesheet" type="text/css" href="{%static 'admin/css/login.css'%}">
+    
+    <link rel="stylesheet" type="text/css" href="{%static 'admin/css/responsive.css'%}">
 </head>
 <body class="login">
 <div id="container">
-    <div id="header">To Do Registration</div>
+    <div id="header"><div id="branding">
+        <h1 id="site-name"><a href="/login">To Do Registration</a></h1>
+    </div></div>
     <div class="main" id="main">
         <div class="content">
             <div id="content" class="colM">
@@ -26,7 +33,9 @@
                         </div>
                     </form>
                 </div>
-                <div id="footer"></div>
+                <div id="footer">
+                    <a href="/login">Already have an account ?</a>
+                </div>
             </div>
         </div>
     </div>
