Link to the registration page on title click

--- a/todo/templates/mainapp/login.html
+++ b/todo/templates/mainapp/login.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {%block branding%}
-<div id="site-name"><h1 id="site-name">Todo Login</h1></div>
+<div id="site-name"><h1 id="site-name"><a href="/registration">Todo Login</a></h1></div>
 {%endblock%}
 
 {% block bodyclass %}{{ block.super }} login {% endblock %}
