--- a/todo/templates/mainapp/index.html
+++ b/todo/templates/mainapp/index.html
@@ -4,6 +4,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="icon" href="{%static 'favicon.ico'%}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -14,7 +16,11 @@
 </head>
 <body id="body">
 <div class="main">
+    
     <div class="topnav">
+        <a class="menu-toggle" id="menu-toggle">
+            &#9776; <!-- Hamburger icon -->
+        </a>
         <a href="{%url 'redirect-to-main'%}">Home</a>
         <a class="logout" href="{%url 'logout'%}">{{request.user.username}}|Logout</a>
     </div>
@@ -25,7 +31,6 @@
                    name="searched">
             <button class="searchimg"><img src="{%static 'staticimages/search.png'%}"></button>
         </form>
-
 
         <ul class="menu_list">
             <li><a class="create_task_btn"><span id="addsign">Create Task +</span></a></li>
@@ -44,7 +49,7 @@
                     {% display_task_item task.pk request %}
                     {%endfor%}
                     {% if task_quantity_for_the_filter > 8 %}
-                    <button id="loadmore" style="float:bottom;">Load More</button>
+                    <button id="loadmore">Load More</button>
                     {%endif%}
             </ul>
         </div>
@@ -59,14 +64,11 @@
     </div>
     <div id="close_create_task_window"></div>
 </div>
-<script>
-window.addEventListener("beforeunload", () => {
-    localStorage.setItem("scrollPositon", document.querySelector(".tasks_list").scrollTop);
-    });
-window.addEventListener("load", () => {
-    document.querySelector(".tasks_list").scrollTop = localStorage.getItem("scrollPositon") || 0;
-});
-</script>
+
+<script src="{%static 'mainapp/javascript/menu_toggle.js'%}"> </script>
+<script src="{%static 'mainapp/javascript/adjust_content_margin.js'%}"> </script>
+
+
 
 <script id='change_task_script' src="{%static 'mainapp/javascript/change_task.js'%}"></script>
 <script src="{%static 'mainapp/javascript/create_task.js'%}"></script>
