Added button type so it doesnt reload the page

--- a/todo/templates/mainapp/change_task_window.html
+++ b/todo/templates/mainapp/change_task_window.html
@@ -9,7 +9,7 @@
         {%for field in form.hidden_fields%}
         <br>{{field}}<br>
         {%endfor%}
-        <button id="closemodal" class="closemodal">Close</button>
+        <button id="closemodal" type="button" class="closemodal">Close</button>
         <button type="submit" class="savebutton">Save</button>
     </form>
 </div>
