--- a/todo/mainapp/static/mainapp/css/style.css
+++ b/todo/mainapp/static/mainapp/css/style.css
@@ -35,7 +35,7 @@ h1 {
     display: flex;
     position: fixed;
     top: 0;
-    z-index: 99999;
+    z-index: 999;
 }
 
 .topnav a {
@@ -187,14 +187,14 @@ h1 {
 .modal {
     background-color: #d5d5d5;
     max-width: 562px;
-    z-index: 999999;
+    z-index: 9999;
     position: fixed;
     top: 0;
     right: 0 !important;
     left: auto;
     width: 33%;
     max-height: 100%;
-    
+
 
 }
 
@@ -243,9 +243,10 @@ h1 {
     border-radius: 4px;
     padding: 10px 40px;
     background-color: #d5d5d5;
-    max-height: 60%;
+    height: fit-content !important;
+    max-height: 80%;
     border: 1px solid grey;
-    z-index: 120;
+    z-index: 999999;
 }
 
 #close_create_task_window {
